openshift/lab4/custom-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom-nginx
  template:
    metadata:
      labels:
        app: custom-nginx
    spec:
      containers:
      - name: custom-nginx
        image: alyaabadr/static-website:latest
        ports:
        - containerPort: 80
