openshift/lab4/custom-service.yml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx-service
spec:
  selector:
    app: custom-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
