openshift/lab4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-nginx-ingress
  namespace: default  # Change this if your NGINX deployment is in a different namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: alyaa.badr  # Replace with your desired hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: custom-nginx-service  # The name of your NGINX service
            port:
              number: 80
